--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Lord Of The Ring - Memory Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Spectral" rel="stylesheet">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/style.css">
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
 
