--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@
             
     <table id="table">
         <tr>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
         </tr>
         <tr>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
         </tr>
         <tr>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
         </tr>
         <tr>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
-            <td><img class="imgStyle" src="/img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
+            <td><img class="imgStyle" src="img/empty.jpg"/></td>
         </tr>
     </table>
     <section>
